<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

   

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scrollview_margintop">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contextClickable="true"
            android:focusable="true"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView

                    android:id="@+id/textView1"

                    android:padding="@dimen/textview_padding"
                    android:layout_width="0dp"
                    android:layout_weight="90"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/download_farmers"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <CheckBox
                    android:id="@+id/farmerscheckBox"
                    android:theme="@style/MyCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <TextView

                    android:id="@+id/textView2"

                    android:padding="@dimen/textview_padding"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_width="0dp"
                    android:layout_weight="90"
                    android:text="@string/download_materials"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <CheckBox
                    android:id="@+id/materialscheck"
                    android:theme="@style/MyCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <TextView

                    android:id="@+id/textView3"

                    android:padding="@dimen/textview_padding"
                    android:layout_width="0dp"
                    android:layout_weight="90"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/download_parameters"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <CheckBox
                    android:id="@+id/parameterscheck"
                    android:theme="@style/MyCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:gravity="center" >

                <View android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_span="2"
                    android:layout_height="1dp" />

            </TableRow>

           <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_span="2"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_system_update_alt_white_18dp"
                    android:background="@drawable/image_button"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:text="@string/update_mobile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="updatemobile"
                    android:id="@+id/button1" />

            </TableRow>

        </TableLayout>

    </ScrollView>
            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="350dp"
                android:gravity="center"
                android:visibility="invisible" />
   </RelativeLayout>